--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Mochamad Idris (G.111.21.1989)</string>
+    <string name="app_name">Arditya Rama Saputra (G.231.20.0108)</string>
 </resources>
